grammar/parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ./grammar/parser.y
-----------------------------------------------------------------------------

state 9 contains 1 shift/reduce conflicts.
state 25 contains 1 shift/reduce conflicts.
state 34 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 69 contains 1 shift/reduce conflicts.
state 81 contains 13 shift/reduce conflicts.
state 97 contains 1 shift/reduce conflicts.
state 106 contains 1 shift/reduce conflicts.
state 118 contains 1 shift/reduce conflicts.
state 128 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 145 contains 1 shift/reduce conflicts.

rule 66 is unused
rule 67 is unused
rule 68 is unused
rule 69 is unused
rule 82 is unused

terminal this is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_program -> TopLevel                         (0)
	TopLevel -> Expression Semi_M                      (1)
	TopLevel -> Expression Expression_Seq Semi_M       (2)
	TopLevel ->                                        (3)
	Expression_Seq -> ';' Expression Expression_Seq    (4)
	Expression_Seq ->                                  (5)
	Semi_M -> ';'                                      (6)
	Semi_M ->                                          (7)
	Operator -> '*'                                    (8)
	Operator -> '+'                                    (9)
	Operator -> '-'                                    (10)
	Operator -> '/'                                    (11)
	Operator -> '%'                                    (12)
	Operator -> uneq                                   (13)
	Operator -> eq                                     (14)
	Operator -> '<'                                    (15)
	Operator -> '>'                                    (16)
	Operator -> leq                                    (17)
	Operator -> greq                                   (18)
	Operator -> '&'                                    (19)
	Operator -> '|'                                    (20)
	Literal -> number                                  (21)
	Literal -> false                                   (22)
	Literal -> true                                    (23)
	Literal -> unit                                    (24)
	Literal -> begin end                               (25)
	Expression -> Function_Def                         (26)
	Expression -> Object_Def                           (27)
	Expression -> Variable_Def                         (28)
	Expression -> Object_Field                         (29)
	Expression -> Conditional                          (30)
	Expression -> Loop                                 (31)
	Expression -> Mutation                             (32)
	Expression -> Print                                (33)
	Expression -> Operation                            (34)
	Function_Def -> function identifier '(' Param_List ')' rarrow Expression   (35)
	Variable_Def -> let identifier '=' Expression      (36)
	Array_Def -> array '(' Expression '.' Expression ')'   (37)
	Operator_Def -> function Operator '(' Param_List ')' rarrow Expression   (38)
	Extends -> extends Expression                      (39)
	Object_Def -> object Param_List Extends begin Object_Body end   (40)
	Object_Body -> Member Semi_M                       (41)
	Object_Body -> Member Member_Seq Semi_M            (42)
	Object_Body ->                                     (43)
	Member -> Variable_Def                             (44)
	Member -> Function_Def                             (45)
	Member -> Operator_Def                             (46)
	Member_Seq -> ';' Member Member_Seq                (47)
	Member_Seq ->                                      (48)
	Mutation -> identifier larrow Expression           (49)
	Mutation -> Object_Field larrow Expression         (50)
	Mutation -> Array_Access larrow Expression         (51)
	Accessible -> '(' Expression ')'                   (52)
	Accessible -> Block                                (53)
	Accessible -> Application                          (54)
	Accessible -> Array_Def                            (55)
	Accessible -> Array_Access                         (56)
	Accessible -> identifier                           (57)
	Accessible -> Literal                              (58)
	Conditional -> if Expression then Expression Else_M   (59)
	Else_M -> else Expression                          (60)
	Else_M ->                                          (61)
	Loop -> while Expression do Expression             (62)
	Block -> begin Expression Expression_Seq end       (63)
	Object_Field -> Accessible '.' Field_Seq identifier   (64)
	Field_Seq -> identifier '.' Field_Seq              (65)
	Field_Seq ->                                       (66)
	Method -> Accessible '.' Field_Seq Id_Op           (67)
	Id_Op -> identifier                                (68)
	Id_Op -> Operator                                  (69)
	Param_List -> identifier Identifier_Seq Comma_M    (70)
	Param_List ->                                      (71)
	Identifier_Seq -> ',' identifier Identifier_Seq    (72)
	Identifier_Seq ->                                  (73)
	Comma_M -> ';'                                     (74)
	Comma_M ->                                         (75)
	Arg_List -> Expression Value_Seq Comma_M           (76)
	Arg_List ->                                        (77)
	Value_Seq -> ',' Expression Value_Seq              (78)
	Value_Seq ->                                       (79)
	Callable -> identifier                             (80)
	Callable -> Object_Field                           (81)
	Callable -> array                                  (82)
	Application -> Callable '(' Arg_List ')'           (83)
	Array_Access -> Accessible '[' Expression ']'      (84)
	Array_Access -> Object_Field '[' Expression ']'    (85)
	Prnt_Args -> ',' Arg_List                          (86)
	Prnt_Args ->                                       (87)
	Print -> print '(' string Prnt_Args ')'            (88)
	Operation -> Operation Operator Operation          (89)
	Operation -> Accessible                            (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { LeftParen }
	')'            { RightParen }
	'['            { LeftBracket }
	']'            { RightBracket }
	';'            { Semicolon }
	'.'            { Dot }
	','            { Comma }
	larrow         { LeftArrow }
	rarrow         { RightArrow }
	'='            { Be }
	'+'            { Plus }
	'-'            { Minus }
	'*'            { Multiply }
	'/'            { Divide }
	'%'            { Modulo }
	leq            { LesserEqual }
	greq           { GreaterEqual }
	'<'            { Lesser }
	'>'            { Greater }
	'|'            { Or }
	'&'            { And }
	eq             { Equal }
	uneq           { UnEqual }
	while          { While }
	object         { Object }
	if             { If }
	else           { Else }
	then           { Then }
	true           { True }
	false          { False }
	array          { Array }
	unit           { Unit }
	let            { Let }
	begin          { Begin }
	end            { End }
	this           { This }
	print          { Print }
	function       { Function }
	do             { Do }
	extends        { Extends }
	identifier     { Identifier $$ }
	number         { Number $$ }
	string         { String $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_program  rule  0
	TopLevel        rules 1, 2, 3
	Expression_Seq  rules 4, 5
	Semi_M          rules 6, 7
	Operator        rules 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20
	Literal         rules 21, 22, 23, 24, 25
	Expression      rules 26, 27, 28, 29, 30, 31, 32, 33, 34
	Function_Def    rule  35
	Variable_Def    rule  36
	Array_Def       rule  37
	Operator_Def    rule  38
	Extends         rule  39
	Object_Def      rule  40
	Object_Body     rules 41, 42, 43
	Member          rules 44, 45, 46
	Member_Seq      rules 47, 48
	Mutation        rules 49, 50, 51
	Accessible      rules 52, 53, 54, 55, 56, 57, 58
	Conditional     rule  59
	Else_M          rules 60, 61
	Loop            rule  62
	Block           rule  63
	Object_Field    rule  64
	Field_Seq       rules 65, 66
	Method          rule  67
	Id_Op           rules 68, 69
	Param_List      rules 70, 71
	Identifier_Seq  rules 72, 73
	Comma_M         rules 74, 75
	Arg_List        rules 76, 77
	Value_Seq       rules 78, 79
	Callable        rules 80, 81, 82
	Application     rule  83
	Array_Access    rules 84, 85
	Prnt_Args       rules 86, 87
	Print           rule  88
	Operation       rules 89, 90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            shift, and enter state 19
	while          shift, and enter state 20
	object         shift, and enter state 21
	if             shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	array          shift, and enter state 25
	unit           shift, and enter state 26
	let            shift, and enter state 27
	begin          shift, and enter state 28
	print          shift, and enter state 29
	function       shift, and enter state 30
	identifier     shift, and enter state 31
	number         shift, and enter state 32
	%eof           reduce using rule 3

	TopLevel       goto state 33
	Literal        goto state 2
	Expression     goto state 34
	Function_Def   goto state 4
	Variable_Def   goto state 5
	Array_Def      goto state 6
	Object_Def     goto state 7
	Mutation       goto state 8
	Accessible     goto state 9
	Conditional    goto state 10
	Loop           goto state 11
	Block          goto state 12
	Object_Field   goto state 13
	Callable       goto state 14
	Application    goto state 15
	Array_Access   goto state 16
	Print          goto state 17
	Operation      goto state 18

State 1


	'('            shift, and enter state 19
	while          shift, and enter state 20
	object         shift, and enter state 21
	if             shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	array          shift, and enter state 25
	unit           shift, and enter state 26
	let            shift, and enter state 27
	begin          shift, and enter state 28
	print          shift, and enter state 29
	function       shift, and enter state 30
	identifier     shift, and enter state 31
	number         shift, and enter state 32

	Literal        goto state 2
	Expression     goto state 3
	Function_Def   goto state 4
	Variable_Def   goto state 5
	Array_Def      goto state 6
	Object_Def     goto state 7
	Mutation       goto state 8
	Accessible     goto state 9
	Conditional    goto state 10
	Loop           goto state 11
	Block          goto state 12
	Object_Field   goto state 13
	Callable       goto state 14
	Application    goto state 15
	Array_Access   goto state 16
	Print          goto state 17
	Operation      goto state 18

State 2

	Accessible -> Literal .                             (rule 58)

	')'            reduce using rule 58
	'['            reduce using rule 58
	']'            reduce using rule 58
	';'            reduce using rule 58
	'.'            reduce using rule 58
	','            reduce using rule 58
	'+'            reduce using rule 58
	'-'            reduce using rule 58
	'*'            reduce using rule 58
	'/'            reduce using rule 58
	'%'            reduce using rule 58
	leq            reduce using rule 58
	greq           reduce using rule 58
	'<'            reduce using rule 58
	'>'            reduce using rule 58
	'|'            reduce using rule 58
	'&'            reduce using rule 58
	eq             reduce using rule 58
	uneq           reduce using rule 58
	else           reduce using rule 58
	then           reduce using rule 58
	begin          reduce using rule 58
	end            reduce using rule 58
	do             reduce using rule 58
	%eof           reduce using rule 58


State 3

	TopLevel -> Expression . Semi_M                     (rule 1)

	';'            shift, and enter state 70

	Semi_M         goto state 36

State 4

	Expression -> Function_Def .                        (rule 26)

	')'            reduce using rule 26
	']'            reduce using rule 26
	';'            reduce using rule 26
	'.'            reduce using rule 26
	','            reduce using rule 26
	else           reduce using rule 26
	then           reduce using rule 26
	begin          reduce using rule 26
	end            reduce using rule 26
	do             reduce using rule 26
	%eof           reduce using rule 26


State 5

	Expression -> Variable_Def .                        (rule 28)

	')'            reduce using rule 28
	']'            reduce using rule 28
	';'            reduce using rule 28
	'.'            reduce using rule 28
	','            reduce using rule 28
	else           reduce using rule 28
	then           reduce using rule 28
	begin          reduce using rule 28
	end            reduce using rule 28
	do             reduce using rule 28
	%eof           reduce using rule 28


State 6

	Accessible -> Array_Def .                           (rule 55)

	')'            reduce using rule 55
	'['            reduce using rule 55
	']'            reduce using rule 55
	';'            reduce using rule 55
	'.'            reduce using rule 55
	','            reduce using rule 55
	'+'            reduce using rule 55
	'-'            reduce using rule 55
	'*'            reduce using rule 55
	'/'            reduce using rule 55
	'%'            reduce using rule 55
	leq            reduce using rule 55
	greq           reduce using rule 55
	'<'            reduce using rule 55
	'>'            reduce using rule 55
	'|'            reduce using rule 55
	'&'            reduce using rule 55
	eq             reduce using rule 55
	uneq           reduce using rule 55
	else           reduce using rule 55
	then           reduce using rule 55
	begin          reduce using rule 55
	end            reduce using rule 55
	do             reduce using rule 55
	%eof           reduce using rule 55


State 7

	Expression -> Object_Def .                          (rule 27)

	')'            reduce using rule 27
	']'            reduce using rule 27
	';'            reduce using rule 27
	'.'            reduce using rule 27
	','            reduce using rule 27
	else           reduce using rule 27
	then           reduce using rule 27
	begin          reduce using rule 27
	end            reduce using rule 27
	do             reduce using rule 27
	%eof           reduce using rule 27


State 8

	Expression -> Mutation .                            (rule 32)

	')'            reduce using rule 32
	']'            reduce using rule 32
	';'            reduce using rule 32
	'.'            reduce using rule 32
	','            reduce using rule 32
	else           reduce using rule 32
	then           reduce using rule 32
	begin          reduce using rule 32
	end            reduce using rule 32
	do             reduce using rule 32
	%eof           reduce using rule 32


State 9

	Object_Field -> Accessible . '.' Field_Seq identifier    (rule 64)
	Array_Access -> Accessible . '[' Expression ']'     (rule 84)
	Operation -> Accessible .                           (rule 90)

	')'            reduce using rule 90
	'['            shift, and enter state 68
	']'            reduce using rule 90
	';'            reduce using rule 90
	'.'            shift, and enter state 69
			(reduce using rule 90)

	','            reduce using rule 90
	'+'            reduce using rule 90
	'-'            reduce using rule 90
	'*'            reduce using rule 90
	'/'            reduce using rule 90
	'%'            reduce using rule 90
	leq            reduce using rule 90
	greq           reduce using rule 90
	'<'            reduce using rule 90
	'>'            reduce using rule 90
	'|'            reduce using rule 90
	'&'            reduce using rule 90
	eq             reduce using rule 90
	uneq           reduce using rule 90
	else           reduce using rule 90
	then           reduce using rule 90
	begin          reduce using rule 90
	end            reduce using rule 90
	do             reduce using rule 90
	%eof           reduce using rule 90


State 10

	Expression -> Conditional .                         (rule 30)

	')'            reduce using rule 30
	']'            reduce using rule 30
	';'            reduce using rule 30
	'.'            reduce using rule 30
	','            reduce using rule 30
	else           reduce using rule 30
	then           reduce using rule 30
	begin          reduce using rule 30
	end            reduce using rule 30
	do             reduce using rule 30
	%eof           reduce using rule 30


State 11

	Expression -> Loop .                                (rule 31)

	')'            reduce using rule 31
	']'            reduce using rule 31
	';'            reduce using rule 31
	'.'            reduce using rule 31
	','            reduce using rule 31
	else           reduce using rule 31
	then           reduce using rule 31
	begin          reduce using rule 31
	end            reduce using rule 31
	do             reduce using rule 31
	%eof           reduce using rule 31


State 12

	Accessible -> Block .                               (rule 53)

	')'            reduce using rule 53
	'['            reduce using rule 53
	']'            reduce using rule 53
	';'            reduce using rule 53
	'.'            reduce using rule 53
	','            reduce using rule 53
	'+'            reduce using rule 53
	'-'            reduce using rule 53
	'*'            reduce using rule 53
	'/'            reduce using rule 53
	'%'            reduce using rule 53
	leq            reduce using rule 53
	greq           reduce using rule 53
	'<'            reduce using rule 53
	'>'            reduce using rule 53
	'|'            reduce using rule 53
	'&'            reduce using rule 53
	eq             reduce using rule 53
	uneq           reduce using rule 53
	else           reduce using rule 53
	then           reduce using rule 53
	begin          reduce using rule 53
	end            reduce using rule 53
	do             reduce using rule 53
	%eof           reduce using rule 53


State 13

	Expression -> Object_Field .                        (rule 29)
	Mutation -> Object_Field . larrow Expression        (rule 50)
	Callable -> Object_Field .                          (rule 81)
	Array_Access -> Object_Field . '[' Expression ']'    (rule 85)

	'('            reduce using rule 81
	')'            reduce using rule 29
	'['            shift, and enter state 66
	']'            reduce using rule 29
	';'            reduce using rule 29
	'.'            reduce using rule 29
	','            reduce using rule 29
	larrow         shift, and enter state 67
	else           reduce using rule 29
	then           reduce using rule 29
	begin          reduce using rule 29
	end            reduce using rule 29
	do             reduce using rule 29
	%eof           reduce using rule 29


State 14

	Application -> Callable . '(' Arg_List ')'          (rule 83)

	'('            shift, and enter state 65


State 15

	Accessible -> Application .                         (rule 54)

	')'            reduce using rule 54
	'['            reduce using rule 54
	']'            reduce using rule 54
	';'            reduce using rule 54
	'.'            reduce using rule 54
	','            reduce using rule 54
	'+'            reduce using rule 54
	'-'            reduce using rule 54
	'*'            reduce using rule 54
	'/'            reduce using rule 54
	'%'            reduce using rule 54
	leq            reduce using rule 54
	greq           reduce using rule 54
	'<'            reduce using rule 54
	'>'            reduce using rule 54
	'|'            reduce using rule 54
	'&'            reduce using rule 54
	eq             reduce using rule 54
	uneq           reduce using rule 54
	else           reduce using rule 54
	then           reduce using rule 54
	begin          reduce using rule 54
	end            reduce using rule 54
	do             reduce using rule 54
	%eof           reduce using rule 54


State 16

	Mutation -> Array_Access . larrow Expression        (rule 51)
	Accessible -> Array_Access .                        (rule 56)

	')'            reduce using rule 56
	'['            reduce using rule 56
	']'            reduce using rule 56
	';'            reduce using rule 56
	'.'            reduce using rule 56
	','            reduce using rule 56
	larrow         shift, and enter state 64
	'+'            reduce using rule 56
	'-'            reduce using rule 56
	'*'            reduce using rule 56
	'/'            reduce using rule 56
	'%'            reduce using rule 56
	leq            reduce using rule 56
	greq           reduce using rule 56
	'<'            reduce using rule 56
	'>'            reduce using rule 56
	'|'            reduce using rule 56
	'&'            reduce using rule 56
	eq             reduce using rule 56
	uneq           reduce using rule 56
	else           reduce using rule 56
	then           reduce using rule 56
	begin          reduce using rule 56
	end            reduce using rule 56
	do             reduce using rule 56
	%eof           reduce using rule 56


State 17

	Expression -> Print .                               (rule 33)

	')'            reduce using rule 33
	']'            reduce using rule 33
	';'            reduce using rule 33
	'.'            reduce using rule 33
	','            reduce using rule 33
	else           reduce using rule 33
	then           reduce using rule 33
	begin          reduce using rule 33
	end            reduce using rule 33
	do             reduce using rule 33
	%eof           reduce using rule 33


State 18

	Expression -> Operation .                           (rule 34)
	Operation -> Operation . Operator Operation         (rule 89)

	')'            reduce using rule 34
	']'            reduce using rule 34
	';'            reduce using rule 34
	'.'            reduce using rule 34
	','            reduce using rule 34
	'+'            shift, and enter state 51
	'-'            shift, and enter state 52
	'*'            shift, and enter state 53
	'/'            shift, and enter state 54
	'%'            shift, and enter state 55
	leq            shift, and enter state 56
	greq           shift, and enter state 57
	'<'            shift, and enter state 58
	'>'            shift, and enter state 59
	'|'            shift, and enter state 60
	'&'            shift, and enter state 61
	eq             shift, and enter state 62
	uneq           shift, and enter state 63
	else           reduce using rule 34
	then           reduce using rule 34
	begin          reduce using rule 34
	end            reduce using rule 34
	do             reduce using rule 34
	%eof           reduce using rule 34

	Operator       goto state 50

State 19

	Accessible -> '(' . Expression ')'                  (rule 52)

	'('            shift, and enter state 19
	while          shift, and enter state 20
	object         shift, and enter state 21
	if             shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	array          shift, and enter state 25
	unit           shift, and enter state 26
	let            shift, and enter state 27
	begin          shift, and enter state 28
	print          shift, and enter state 29
	function       shift, and enter state 30
	identifier     shift, and enter state 31
	number         shift, and enter state 32

	Literal        goto state 2
	Expression     goto state 49
	Function_Def   goto state 4
	Variable_Def   goto state 5
	Array_Def      goto state 6
	Object_Def     goto state 7
	Mutation       goto state 8
	Accessible     goto state 9
	Conditional    goto state 10
	Loop           goto state 11
	Block          goto state 12
	Object_Field   goto state 13
	Callable       goto state 14
	Application    goto state 15
	Array_Access   goto state 16
	Print          goto state 17
	Operation      goto state 18

State 20

	Loop -> while . Expression do Expression            (rule 62)

	'('            shift, and enter state 19
	while          shift, and enter state 20
	object         shift, and enter state 21
	if             shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	array          shift, and enter state 25
	unit           shift, and enter state 26
	let            shift, and enter state 27
	begin          shift, and enter state 28
	print          shift, and enter state 29
	function       shift, and enter state 30
	identifier     shift, and enter state 31
	number         shift, and enter state 32

	Literal        goto state 2
	Expression     goto state 48
	Function_Def   goto state 4
	Variable_Def   goto state 5
	Array_Def      goto state 6
	Object_Def     goto state 7
	Mutation       goto state 8
	Accessible     goto state 9
	Conditional    goto state 10
	Loop           goto state 11
	Block          goto state 12
	Object_Field   goto state 13
	Callable       goto state 14
	Application    goto state 15
	Array_Access   goto state 16
	Print          goto state 17
	Operation      goto state 18

State 21

	Object_Def -> object . Param_List Extends begin Object_Body end    (rule 40)

	extends        reduce using rule 71
	identifier     shift, and enter state 47

	Param_List     goto state 46

State 22

	Conditional -> if . Expression then Expression Else_M    (rule 59)

	'('            shift, and enter state 19
	while          shift, and enter state 20
	object         shift, and enter state 21
	if             shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	array          shift, and enter state 25
	unit           shift, and enter state 26
	let            shift, and enter state 27
	begin          shift, and enter state 28
	print          shift, and enter state 29
	function       shift, and enter state 30
	identifier     shift, and enter state 31
	number         shift, and enter state 32

	Literal        goto state 2
	Expression     goto state 45
	Function_Def   goto state 4
	Variable_Def   goto state 5
	Array_Def      goto state 6
	Object_Def     goto state 7
	Mutation       goto state 8
	Accessible     goto state 9
	Conditional    goto state 10
	Loop           goto state 11
	Block          goto state 12
	Object_Field   goto state 13
	Callable       goto state 14
	Application    goto state 15
	Array_Access   goto state 16
	Print          goto state 17
	Operation      goto state 18

State 23

	Literal -> true .                                   (rule 23)

	')'            reduce using rule 23
	'['            reduce using rule 23
	']'            reduce using rule 23
	';'            reduce using rule 23
	'.'            reduce using rule 23
	','            reduce using rule 23
	'+'            reduce using rule 23
	'-'            reduce using rule 23
	'*'            reduce using rule 23
	'/'            reduce using rule 23
	'%'            reduce using rule 23
	leq            reduce using rule 23
	greq           reduce using rule 23
	'<'            reduce using rule 23
	'>'            reduce using rule 23
	'|'            reduce using rule 23
	'&'            reduce using rule 23
	eq             reduce using rule 23
	uneq           reduce using rule 23
	else           reduce using rule 23
	then           reduce using rule 23
	begin          reduce using rule 23
	end            reduce using rule 23
	do             reduce using rule 23
	%eof           reduce using rule 23


State 24

	Literal -> false .                                  (rule 22)

	')'            reduce using rule 22
	'['            reduce using rule 22
	']'            reduce using rule 22
	';'            reduce using rule 22
	'.'            reduce using rule 22
	','            reduce using rule 22
	'+'            reduce using rule 22
	'-'            reduce using rule 22
	'*'            reduce using rule 22
	'/'            reduce using rule 22
	'%'            reduce using rule 22
	leq            reduce using rule 22
	greq           reduce using rule 22
	'<'            reduce using rule 22
	'>'            reduce using rule 22
	'|'            reduce using rule 22
	'&'            reduce using rule 22
	eq             reduce using rule 22
	uneq           reduce using rule 22
	else           reduce using rule 22
	then           reduce using rule 22
	begin          reduce using rule 22
	end            reduce using rule 22
	do             reduce using rule 22
	%eof           reduce using rule 22


State 25

	Array_Def -> array . '(' Expression '.' Expression ')'    (rule 37)
	Callable -> array .                                 (rule 82)

	'('            shift, and enter state 44
			(reduce using rule 82)



State 26

	Literal -> unit .                                   (rule 24)

	')'            reduce using rule 24
	'['            reduce using rule 24
	']'            reduce using rule 24
	';'            reduce using rule 24
	'.'            reduce using rule 24
	','            reduce using rule 24
	'+'            reduce using rule 24
	'-'            reduce using rule 24
	'*'            reduce using rule 24
	'/'            reduce using rule 24
	'%'            reduce using rule 24
	leq            reduce using rule 24
	greq           reduce using rule 24
	'<'            reduce using rule 24
	'>'            reduce using rule 24
	'|'            reduce using rule 24
	'&'            reduce using rule 24
	eq             reduce using rule 24
	uneq           reduce using rule 24
	else           reduce using rule 24
	then           reduce using rule 24
	begin          reduce using rule 24
	end            reduce using rule 24
	do             reduce using rule 24
	%eof           reduce using rule 24


State 27

	Variable_Def -> let . identifier '=' Expression     (rule 36)

	identifier     shift, and enter state 43


State 28

	Literal -> begin . end                              (rule 25)
	Block -> begin . Expression Expression_Seq end      (rule 63)

	'('            shift, and enter state 19
	while          shift, and enter state 20
	object         shift, and enter state 21
	if             shift, and enter state 22
	true           shift, and enter state 23
	false          shift, and enter state 24
	array          shift, and enter state 25
	unit           shift, and enter state 26
	let            shift, and enter state 27
	begin          shift, and enter state 28
	end            shift, and enter state 42
	print          shift, and enter state 29
	function       shift, and enter state 30
	identifier     shift, and enter state 31
	number         shift, and enter state 32

	Literal        goto state 2
	Expression     goto state 41
	Function_Def   goto state 4
	Variable_Def   goto state 5
	Array_Def      goto state 6
	Object_Def     goto state 7
	Mutation       goto state 8
	Accessible     goto state 9
	Conditional    goto state 10
	Loop           goto state 11
	Block          goto state 12
	Object_Field   goto state 13
	Callable       goto state 14
	Application    goto state 15
	Array_Access   goto state 16
	Print          goto state 17
	Operation      goto state 18

State 29

	Print -> print . '(' string Prnt_Args ')'           (rule 88)

	'('            shift, and enter state 40


State 30

	Function_Def -> function . identifier '(' Param_List ')' rarrow Expression    (rule 35)

	identifier     shift, and enter state 39


State 31

	Mutation -> identifier . larrow Expression          (rule 49)
	Accessible -> identifier .                          (rule 57)
	Callable -> identifier .                            (rule 80)

	'('            reduce using rule 80
	')'            reduce using rule 57
	'['            reduce using rule 57
	']'            reduce using rule 57
	';'            reduce using rule 57
	'.'            reduce using rule 57
	','            reduce using rule 57
	larrow         shift, and enter state 38
	'+'            reduce using rule 57
	'-'            reduce using rule 57
	'*'            reduce using rule 57
	'/'            reduce using rule 57
	'%'            reduce using rule 57
	leq            reduce using rule 57
	greq           reduce using rule 57
	'<'            reduce using rule 57
	'>'            reduce using rule 57
	'|'            reduce using rule 57
	'&'            reduce using rule 57
	eq             reduce using rule 57
	uneq           reduce using rule 57
	else           reduce using rule 57
	then           reduce using rule 57
	begin          reduce using rule 57
	end            reduce using rule 57
	do             reduce using rule 57
	%eof           reduce using rule 57


State 32

	Literal -> number .                                 (rule 21)
